src/plugins/OclPlugin/OclParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Ocl.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class OclParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, Stereotype=47, NAME=48, NUMBER=49, WS=50;
	public const int
		RULE_oclFile = 0, RULE_packageName = 1, RULE_oclExpressions = 2, RULE_constraint = 3, 
		RULE_contextDeclaration = 4, RULE_classifierContext = 5, RULE_operationContext = 6, 
		RULE_operationName = 7, RULE_formalParameterList = 8, RULE_typeSpecifier = 9, 
		RULE_collectionType = 10, RULE_oclExpression = 11, RULE_returnType = 12, 
		RULE_expression = 13, RULE_letExpression = 14, RULE_ifExpression = 15, 
		RULE_implExpression = 16, RULE_orExpression = 17, RULE_andExpression = 18, 
		RULE_relationalExpression = 19, RULE_additiveExpression = 20, RULE_multiplicativeExpression = 21, 
		RULE_unaryExpression = 22, RULE_postfixExpression = 23, RULE_primaryExpression = 24, 
		RULE_propertyCallParameters = 25, RULE_literal = 26, RULE_stringLiteral = 27, 
		RULE_enumLiteral = 28, RULE_simpleTypeSpecifier = 29, RULE_literalCollection = 30, 
		RULE_collectionItem = 31, RULE_propertyCall = 32, RULE_qualifiers = 33, 
		RULE_declarator = 34, RULE_pathName = 35, RULE_timeExpression = 36, RULE_actualParameterList = 37, 
		RULE_logicalOperator = 38, RULE_collectionKind = 39, RULE_relationalOperator = 40, 
		RULE_addOperator = 41, RULE_multiplyOperator = 42, RULE_unaryOperator = 43, 
		RULE_booleanLiteral = 44;
	public static readonly string[] ruleNames = {
		"oclFile", "packageName", "oclExpressions", "constraint", "contextDeclaration", 
		"classifierContext", "operationContext", "operationName", "formalParameterList", 
		"typeSpecifier", "collectionType", "oclExpression", "returnType", "expression", 
		"letExpression", "ifExpression", "implExpression", "orExpression", "andExpression", 
		"relationalExpression", "additiveExpression", "multiplicativeExpression", 
		"unaryExpression", "postfixExpression", "primaryExpression", "propertyCallParameters", 
		"literal", "stringLiteral", "enumLiteral", "simpleTypeSpecifier", "literalCollection", 
		"collectionItem", "propertyCall", "qualifiers", "declarator", "pathName", 
		"timeExpression", "actualParameterList", "logicalOperator", "collectionKind", 
		"relationalOperator", "addOperator", "multiplyOperator", "unaryOperator", 
		"booleanLiteral"
	};

	private static readonly string[] _LiteralNames = {
		null, "'package'", "'endpackage'", "'@'", "':'", "'context'", "'::'", 
		"'('", "')'", "'='", "'+'", "'-'", "'<'", "'<='", "'>='", "'>'", "'/'", 
		"'*'", "'<>'", "'implies'", "'not'", "'or'", "'xor'", "'and'", "','", 
		"'let'", "';'", "'if'", "'then'", "'else'", "'endif'", "'.'", "'->'", 
		"'\"'", "'{'", "'}'", "'..'", "'['", "']'", "'|'", "'pre'", "'Set'", "'Bag'", 
		"'Sequence'", "'Collection'", "'true'", "'false'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "Stereotype", 
		"NAME", "NUMBER", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Ocl.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static OclParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public OclParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public OclParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class OclFileContext : ParserRuleContext {
		public PackageNameContext[] packageName() {
			return GetRuleContexts<PackageNameContext>();
		}
		public PackageNameContext packageName(int i) {
			return GetRuleContext<PackageNameContext>(i);
		}
		public OclExpressionsContext[] oclExpressions() {
			return GetRuleContexts<OclExpressionsContext>();
		}
		public OclExpressionsContext oclExpressions(int i) {
			return GetRuleContext<OclExpressionsContext>(i);
		}
		public OclFileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_oclFile; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOclVisitor<TResult> typedVisitor = visitor as IOclVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOclFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OclFileContext oclFile() {
		OclFileContext _localctx = new OclFileContext(Context, State);
		EnterRule(_localctx, 0, RULE_oclFile);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 90; Match(T__0);
				State = 91; packageName();
				State = 92; oclExpressions();
				State = 93; Match(T__1);
				}
				}
				State = 97;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PackageNameContext : ParserRuleContext {
		public PathNameContext pathName() {
			return GetRuleContext<PathNameContext>(0);
		}
		public PackageNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_packageName; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOclVisitor<TResult> typedVisitor = visitor as IOclVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPackageName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PackageNameContext packageName() {
		PackageNameContext _localctx = new PackageNameContext(Context, State);
		EnterRule(_localctx, 2, RULE_packageName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99; pathName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OclExpressionsContext : ParserRuleContext {
		public ConstraintContext[] constraint() {
			return GetRuleContexts<ConstraintContext>();
		}
		public ConstraintContext constraint(int i) {
			return GetRuleContext<ConstraintContext>(i);
		}
		public OclExpressionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_oclExpressions; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOclVisitor<TResult> typedVisitor = visitor as IOclVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOclExpressions(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OclExpressionsContext oclExpressions() {
		OclExpressionsContext _localctx = new OclExpressionsContext(Context, State);
		EnterRule(_localctx, 4, RULE_oclExpressions);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__4) {
				{
				{
				State = 101; constraint();
				}
				}
				State = 106;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstraintContext : ParserRuleContext {
		public ContextDeclarationContext contextDeclaration() {
			return GetRuleContext<ContextDeclarationContext>(0);
		}
		public ITerminalNode[] Stereotype() { return GetTokens(OclParser.Stereotype); }
		public ITerminalNode Stereotype(int i) {
			return GetToken(OclParser.Stereotype, i);
		}
		public ITerminalNode[] NUMBER() { return GetTokens(OclParser.NUMBER); }
		public ITerminalNode NUMBER(int i) {
			return GetToken(OclParser.NUMBER, i);
		}
		public OclExpressionContext[] oclExpression() {
			return GetRuleContexts<OclExpressionContext>();
		}
		public OclExpressionContext oclExpression(int i) {
			return GetRuleContext<OclExpressionContext>(i);
		}
		public ITerminalNode[] NAME() { return GetTokens(OclParser.NAME); }
		public ITerminalNode NAME(int i) {
			return GetToken(OclParser.NAME, i);
		}
		public ConstraintContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constraint; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOclVisitor<TResult> typedVisitor = visitor as IOclVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstraint(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstraintContext constraint() {
		ConstraintContext _localctx = new ConstraintContext(Context, State);
		EnterRule(_localctx, 6, RULE_constraint);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107; contextDeclaration();
			State = 116;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 108; Match(Stereotype);
				State = 109; Match(T__2);
				State = 110; Match(NUMBER);
				State = 112;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==NAME) {
					{
					State = 111; Match(NAME);
					}
				}

				State = 114; Match(T__3);
				State = 115; oclExpression();
				}
				}
				State = 118;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==Stereotype );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ContextDeclarationContext : ParserRuleContext {
		public OperationContextContext operationContext() {
			return GetRuleContext<OperationContextContext>(0);
		}
		public ClassifierContextContext classifierContext() {
			return GetRuleContext<ClassifierContextContext>(0);
		}
		public ContextDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_contextDeclaration; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOclVisitor<TResult> typedVisitor = visitor as IOclVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitContextDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ContextDeclarationContext contextDeclaration() {
		ContextDeclarationContext _localctx = new ContextDeclarationContext(Context, State);
		EnterRule(_localctx, 8, RULE_contextDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120; Match(T__4);
			State = 123;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				State = 121; operationContext();
				}
				break;
			case 2:
				{
				State = 122; classifierContext();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassifierContextContext : ParserRuleContext {
		public ITerminalNode[] NAME() { return GetTokens(OclParser.NAME); }
		public ITerminalNode NAME(int i) {
			return GetToken(OclParser.NAME, i);
		}
		public ClassifierContextContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classifierContext; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOclVisitor<TResult> typedVisitor = visitor as IOclVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassifierContext(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassifierContextContext classifierContext() {
		ClassifierContextContext _localctx = new ClassifierContextContext(Context, State);
		EnterRule(_localctx, 10, RULE_classifierContext);
		try {
			State = 129;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 125; Match(NAME);
				State = 126; Match(T__3);
				State = 127; Match(NAME);
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 128; Match(NAME);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperationContextContext : ParserRuleContext {
		public ITerminalNode NAME() { return GetToken(OclParser.NAME, 0); }
		public OperationNameContext operationName() {
			return GetRuleContext<OperationNameContext>(0);
		}
		public FormalParameterListContext formalParameterList() {
			return GetRuleContext<FormalParameterListContext>(0);
		}
		public ReturnTypeContext returnType() {
			return GetRuleContext<ReturnTypeContext>(0);
		}
		public OperationContextContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operationContext; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOclVisitor<TResult> typedVisitor = visitor as IOclVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperationContext(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OperationContextContext operationContext() {
		OperationContextContext _localctx = new OperationContextContext(Context, State);
		EnterRule(_localctx, 12, RULE_operationContext);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 131; Match(NAME);
			State = 132; Match(T__5);
			State = 133; operationName();
			State = 134; Match(T__6);
			State = 135; formalParameterList();
			State = 136; Match(T__7);
			State = 139;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__3) {
				{
				State = 137; Match(T__3);
				State = 138; returnType();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperationNameContext : ParserRuleContext {
		public ITerminalNode NAME() { return GetToken(OclParser.NAME, 0); }
		public OperationNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operationName; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOclVisitor<TResult> typedVisitor = visitor as IOclVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperationName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OperationNameContext operationName() {
		OperationNameContext _localctx = new OperationNameContext(Context, State);
		EnterRule(_localctx, 14, RULE_operationName);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 141;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << NAME))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FormalParameterListContext : ParserRuleContext {
		public ITerminalNode[] NAME() { return GetTokens(OclParser.NAME); }
		public ITerminalNode NAME(int i) {
			return GetToken(OclParser.NAME, i);
		}
		public TypeSpecifierContext[] typeSpecifier() {
			return GetRuleContexts<TypeSpecifierContext>();
		}
		public TypeSpecifierContext typeSpecifier(int i) {
			return GetRuleContext<TypeSpecifierContext>(i);
		}
		public FormalParameterListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_formalParameterList; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOclVisitor<TResult> typedVisitor = visitor as IOclVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFormalParameterList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FormalParameterListContext formalParameterList() {
		FormalParameterListContext _localctx = new FormalParameterListContext(Context, State);
		EnterRule(_localctx, 16, RULE_formalParameterList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 155;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==NAME) {
				{
				State = 143; Match(NAME);
				State = 144; Match(T__3);
				State = 145; typeSpecifier();
				State = 152;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__23) {
					{
					{
					State = 146; Match(T__23);
					State = 147; Match(NAME);
					State = 148; Match(T__3);
					State = 149; typeSpecifier();
					}
					}
					State = 154;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeSpecifierContext : ParserRuleContext {
		public SimpleTypeSpecifierContext simpleTypeSpecifier() {
			return GetRuleContext<SimpleTypeSpecifierContext>(0);
		}
		public CollectionTypeContext collectionType() {
			return GetRuleContext<CollectionTypeContext>(0);
		}
		public TypeSpecifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeSpecifier; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOclVisitor<TResult> typedVisitor = visitor as IOclVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeSpecifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeSpecifierContext typeSpecifier() {
		TypeSpecifierContext _localctx = new TypeSpecifierContext(Context, State);
		EnterRule(_localctx, 18, RULE_typeSpecifier);
		try {
			State = 159;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NAME:
				EnterOuterAlt(_localctx, 1);
				{
				State = 157; simpleTypeSpecifier();
				}
				break;
			case T__40:
			case T__41:
			case T__42:
			case T__43:
				EnterOuterAlt(_localctx, 2);
				{
				State = 158; collectionType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CollectionTypeContext : ParserRuleContext {
		public CollectionKindContext collectionKind() {
			return GetRuleContext<CollectionKindContext>(0);
		}
		public SimpleTypeSpecifierContext simpleTypeSpecifier() {
			return GetRuleContext<SimpleTypeSpecifierContext>(0);
		}
		public CollectionTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_collectionType; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOclVisitor<TResult> typedVisitor = visitor as IOclVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCollectionType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CollectionTypeContext collectionType() {
		CollectionTypeContext _localctx = new CollectionTypeContext(Context, State);
		EnterRule(_localctx, 20, RULE_collectionType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 161; collectionKind();
			State = 162; Match(T__6);
			State = 163; simpleTypeSpecifier();
			State = 164; Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OclExpressionContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public LetExpressionContext[] letExpression() {
			return GetRuleContexts<LetExpressionContext>();
		}
		public LetExpressionContext letExpression(int i) {
			return GetRuleContext<LetExpressionContext>(i);
		}
		public OclExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_oclExpression; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOclVisitor<TResult> typedVisitor = visitor as IOclVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOclExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OclExpressionContext oclExpression() {
		OclExpressionContext _localctx = new OclExpressionContext(Context, State);
		EnterRule(_localctx, 22, RULE_oclExpression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 169;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__24) {
				{
				{
				State = 166; letExpression();
				}
				}
				State = 171;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 172; expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReturnTypeContext : ParserRuleContext {
		public TypeSpecifierContext typeSpecifier() {
			return GetRuleContext<TypeSpecifierContext>(0);
		}
		public ReturnTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_returnType; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOclVisitor<TResult> typedVisitor = visitor as IOclVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReturnType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReturnTypeContext returnType() {
		ReturnTypeContext _localctx = new ReturnTypeContext(Context, State);
		EnterRule(_localctx, 24, RULE_returnType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 174; typeSpecifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ImplExpressionContext implExpression() {
			return GetRuleContext<ImplExpressionContext>(0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOclVisitor<TResult> typedVisitor = visitor as IOclVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 26, RULE_expression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 176; implExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LetExpressionContext : ParserRuleContext {
		public ITerminalNode NAME() { return GetToken(OclParser.NAME, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public FormalParameterListContext formalParameterList() {
			return GetRuleContext<FormalParameterListContext>(0);
		}
		public TypeSpecifierContext typeSpecifier() {
			return GetRuleContext<TypeSpecifierContext>(0);
		}
		public LetExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_letExpression; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOclVisitor<TResult> typedVisitor = visitor as IOclVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLetExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LetExpressionContext letExpression() {
		LetExpressionContext _localctx = new LetExpressionContext(Context, State);
		EnterRule(_localctx, 28, RULE_letExpression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 178; Match(T__24);
			State = 179; Match(NAME);
			State = 184;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__6) {
				{
				State = 180; Match(T__6);
				State = 181; formalParameterList();
				State = 182; Match(T__7);
				}
			}
